<resources>
    <string name="app_name">PassWordManger</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">Dashboard</string>
    <string name="Edit">Edit</string>
    <string name="Update">Update</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="website">Account name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="setup_wrong_pin">Nope, that\'s wrong. Try again</string>
    <string name="setup_choose_pin">Choose a 4-digit PIN carefully! Once set, you cannot change
        it later(not without losing data)</string>
    <string name="setup_enter_pin">Enter your PIN ...</string>
    <string name="error_empty">can\'t be empty</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="intro_title_one">It\'s Secure</string>
    <string name="intro_desc_one">Your data is stored locally - in an encrypted database \nApp doesn\'t connect to any server and does not track or maintain copies of your info.</string>
    <string name="intro_title_two">It\'s Offline.</string>
    <string name="intro_desc_two">App is completely usable without internet \nYou choose a 4-digit pin and will need to enter it whenever you open or return to the app.</string>
    <string name="intro_title_three">It\'s Simple.</string>
    <string name="intro_desc_three">App is designed to be simple and responsive.\n It does no analyitcs, \nno background operations, \nno ads or other distractions. \nIt needs no extra permissions</string>

</resources>
